--- a/NODEJS/src/views/displayCRUD.ejs
+++ b/NODEJS/src/views/displayCRUD.ejs
@@ -6,7 +6,34 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <style>
+    .btn-edit {
+      outline: none;
+      border: none;
+      text-align: center;
+      color: black;
+      background: orange;
+      height: 25px;
+      width: 60px;
+      border-radius: 3px;
+      cursor: pointer;
+    }
+  
+    .btn-delete{
+      outline: none;
+      border: none;
+      text-align: center;
+      color: black;
+      background: red;
+      height: 25px;
+      width: 60px;
+      border-radius: 3px;
+      cursor: pointer;
+    }
+  </style>
 </head>
+
 <body>
 
 <div class="container">
@@ -21,6 +48,7 @@
         <th>Firstname</th>
         <th>Lastname</th>
         <th>Address</th>
+        <th>Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -30,6 +58,10 @@
                  <td><%= dataTable[i].firstName %></td>
                  <td><%= dataTable[i].lastName %></td>
                  <td><%= dataTable[i].address %></td>
+                 <td>
+                    <a  href="/edit-crud?id=<%= dataTable[i].id %>" class="btn-edit" type="button">Edit</a>
+                    <a href="/delete-crud?id=<%= dataTable[i].id %>" class="btn-delete" type="button">Delete</a>
+                 </td>
                </tr>
             <% } %>
     </tbody>
