--- a/REACTJS/src/containers/System/UserManage.scss
+++ b/REACTJS/src/containers/System/UserManage.scss
@@ -46,3 +46,22 @@
         color: rgb(235, 15, 15) !important;
     }
   }
+
+  .modal-user-container{
+    .modal-content{
+      .modal-header{
+        button{
+          background-color: transparent !important;
+          border: none ;
+          color: white;
+          font-size: 27px;
+        }
+      }
+    }
+
+    .input-container{
+      input{
+
+      }
+    }
+  }
