--- a/REACTJS/src/containers/HomePage/HomePage.scss
+++ b/REACTJS/src/containers/HomePage/HomePage.scss
@@ -140,6 +140,7 @@
 
   .section-customize {
     padding: 5px;
+    cursor: pointer;
     .customize-border {
       border: 1px solid orange;
       padding: 20px;
