--- a/REACTJS/src/containers/System/Admin/ManageDoctor.scss
+++ b/REACTJS/src/containers/System/Admin/ManageDoctor.scss
@@ -24,10 +24,25 @@
     }
   }
 
+  .create-content-doctor {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    border-radius: 3px;
+    outline: none;
+    border: none;
+    padding: 5px;
+    background: rgb(11, 93, 216);
+    cursor: pointer;
+    color: white;
+    &:hover {
+      opacity: 0.9;
+    }
+  }
+
   .more-infor {
     display: flex;
     gap: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 15pxsav;
 
     .content-left {
       width: 40%;
