--- a/REACTJS/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/REACTJS/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -34,7 +34,7 @@
     }
   }
 
-  .detai-infor-doctor {
+  .detail-infor-doctor {
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
     background-color: #f9f9f9;
