--- a/REACTJS/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/REACTJS/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -37,13 +37,13 @@
   .schedule-doctor {
     margin: 0 100px;
     display: flex;
-    height: 200px;
-    border: 1px solid red;
+    min-height: 200px;
+    padding: 10px 0;
 
-    .content-left{
+    .content-left {
       width: 50%;
     }
-    .content-right{
+    .content-right {
       width: 50%;
     }
   }
