--- a/REACTJS/src/containers/HomePage/HomePage.scss
+++ b/REACTJS/src/containers/HomePage/HomePage.scss
@@ -67,7 +67,7 @@
         }
 
         &.section-medical-facility {
-          background-image: url("../../assets/medical-facility/he-thong-y-te.jpg");
+          // background-image: url("../../assets/medical-facility/he-thong-y-te.jpg");
         }
 
         &.section-outstanding-doctor {
